@@ -12,6 +12,8 @@
 	* term/svg.trm: Revert 2016-09-23 "in line images do not require png
 	support".  Actually, they do.
 
+	* src/plot2d.c (eval_plots):  Initialize fillcolor.
+
 2016-09-25  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/pm3d.c (set_plot_with_palette): When checking for plot elements 
